# wanderlust

./: .gitignore  Cargo.toml  README.md  pg_cmd.sh  pg_run.sh  words.sh  words.txt
src/: error.rs  format.rs  lib.rs  main.rs  migration.rs  model.rs  ordered_hash_map.rs
src/dialects/: postgresql.rs
src/dialects/postgresql/: parser.rs  reflect.rs  tokenizer.rs
src/model/: alter.rs  column.rs  database.rs  ddl.rs  extension.rs  floats.rs  function.rs  index.rs  integers.rs  name.rs  object_ref.rs  schema.rs  statement.rs  syntax.rs  table.rs  token.rs  trigger.rs  types.rs  words.rs
src/model/alter/: extension.rs  table.rs  types.rs
tests/: helper.rs  integration_test.rs  testgen.rs
tests/001_create/: 001_basic_table.sql  002_foreign_key_and_constraints.sql  003_index.sql  004_function.sql  005_trigger.sql  006_types.sql  007_complex_table.sql
tests/002_alter/: 001_add_column.sql  002_alter_column.sql  003_alter_constraints.sql  004_add_to_type.sql  005_remove_from_type.sql  006_drop_column.sql  007_complex_table.sql
