[package]
name = "wanderlust"
version = "0.1.0"
edition = "2024"
default-run = "wanderlust"

[dependencies]
postgres = "0.19.10"

[dev-dependencies]
pretty_assertions = "1.4.1"

[[bin]]
name = "wanderlust"

[lib]
name = "wanderlust"

[[bin]]
name = "testgen"
path = "tests/testgen.rs"
target = 'cfg(test)'
